# CellularAutomata

./: .gitignore
ArduinoBridge/: ArduinoBridge.ino
RPiMaster/: CMakeLists.txt
RPiMaster/src/board/: RectangularBoard.cpp
RPiMaster/src/connection/: Connection.cpp  ConnectionMap.cpp  I2CConnection.cpp  I2CConnection.h
RPiMaster/src/rules/: AggregateRule.cpp  AggregateRule.h  CountRule.cpp  Rule.cpp  Rule.h
RPiMaster/src/simulator/: Simulator.cpp
RaspberryPI/src/board/: RectangularBoard.h
RaspberryPI/src/connection/: Connection.h  ConnectionMap.h
RaspberryPI/src/rules/: CountRule.h
STMController/: I2C.ino  LedController.h  STMController.ino  TouchController.h  commands.h
src/: main.cpp
src/board/: RectangularBoard.cpp  RectangularBoard.h
src/connection/: Connection.cpp  Connection.h  ConnectionMap.cpp  ConnectionMap.h  I2CConnection.cpp  I2CConnection.h
src/simulator/: Simulator.h
